ipmmu-vmsa: Add CONFIG_RCAR_IPMMU_PGT_IS_SHARED
Make it possible to configure Xen/IPMMU shared page tables for
Renesas R-Car's H3 v3.0 and M3N boards which have the IPMMU that
does handle stage 2 translation table format and as the result
is able to share P2M with the CPU.

Signed-off-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>
Suggested-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Andrii Anisov <andrii_anisov@epam.com>

--- a/xen/drivers/passthrough/Kconfig
+++ b/xen/drivers/passthrough/Kconfig
@@ -1,3 +1,12 @@
 
 config HAS_PASSTHROUGH
 	bool
+
+config RCAR_IPMMU_PGT_IS_SHARED
+	bool "Renesas R-Car's IPMMU shared page tables support"
+	depends on HAS_PASSTHROUGH && ARM_64
+	default y
+	help
+	  Enable this for Renesas R-Car's H3 v3.0 and M3N boards
+	  which have the IPMMU that does handle stage 2 translation
+	  table format and as the result is able to share P2M with the CPU.
